--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: julia
 os:
   - linux
   - osx
+dist: trusty
+sudo: false
+addons:
+    apt:
+        packages:
+            - xorg-dev
+
 julia:
   - 1.0
   - nightly
@@ -17,12 +24,8 @@ matrix:
   allow_failures:
   - julia: nightly
 
-## uncomment and modify the following lines to manually install system packages
-#addons:
-#  apt: # apt-get for linux
-#    packages:
-#    - gfortran
-#before_script: # homebrew for mac
+before_script: # homebrew for mac
+    - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start; fi
 
 ## uncomment the following lines to override the default test script
 #script:
