--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ addons:
             - libxinerama-dev 
             - libxcursor-dev 
             - mesa-utils
-            - libgl1-mesa-swx11
-            - libgl1-mesa-swx11-dev
+            - libosmesa6
+            - libosmesa6-dev
             - xvfb
 
 julia:
