--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
   allow_failures:
   - julia: nightly
 
-before_script: # homebrew for mac
+before_install: # homebrew for mac
     - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then export DISPLAY=:99.0; /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render; fi
 
 ## uncomment the following lines to override the default test script
