--- a/.travis.yml
+++ b/.travis.yml
@@ -42,10 +42,10 @@ before_script:
   - export LIBGL_ALWAYS_SOFTWARE=1
   - sudo xpra --xvfb="Xorg +extension GLX +extension RANDR +extension RENDER -config `pwd`/test/dummy.xorg.conf -logfile ${HOME}/.xpra/xorg.log"  start :99
   - sleep 3 
-  - cat ${HOME}/.xpra/xorg.log
+  - sudo cat ${HOME}/.xpra/xorg.log
   - LIBGL_ALWAYS_SOFTWARE=1 glxinfo
   - glxinfo
-  - cat ${HOME}/.xpra/xorg.log
+  - sudo cat ${HOME}/.xpra/xorg.log
 
 after_sucess:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
